@@ -5,6 +5,7 @@ import { GuysTopsLayout } from './Store/guys-tops-layout';
 import { HomeLayoutComponent } from './Store/home-layout.component';
 import { GirlsTopsLayout } from './Store/girls-tops-layout.component';
 import { GuysBottomsLayout } from './Store/guys-bottoms-layout.component';
+import { AddGuysTopsComponent } from './Store/add-guys-tops/add-guys-tops.component';
 
 const routes: Routes = [
   {path: '', component: HomeLayoutComponent},
@@ -12,7 +13,8 @@ const routes: Routes = [
   {path: 'guys-bottoms', component: GuysBottomsLayout},
 
   {path: 'home', component: HomeLayoutComponent},
-  {path: 'girls-tops', component: GirlsTopsLayout}
+  {path: 'girls-tops', component: GirlsTopsLayout},
+  {path: 'admin', component: AddGuysTopsComponent}
 
 ];
 
